Integrate Fumadocs UI components into MDX rendering, enhance layout with a title, and expand ElizaOS documentation with detailed descriptions, installation methods, and structured learning paths. Update guides for character creation and plugin development, ensuring clarity and accessibility for developers.

--- a/content/docs/advanced/database-adapters.mdx
+++ b/content/docs/advanced/database-adapters.mdx
@@ -5,7 +5,7 @@ description: PostgreSQL and PGlite database adapters with vector search, memory 
 
 # Database Adapters
 
-Eliza's database layer provides a robust foundation for agent persistence, memory management, and vector search capabilities. The `@elizaos/plugin-sql` package offers PostgreSQL and PGlite adapters with automatic failover and comprehensive data management features.
+PostgreSQL and PGlite database adapters with vector search, memory management, and advanced features
 
 ## Overview
 
@@ -49,16 +49,29 @@ The database adapter system provides:
 
 ## Installation
 
+<Tabs items={['bun', 'npm', 'pnpm']}>
+  <Tab value="bun">
+    
 ```bash
-# Using bun
 bun add @elizaos/plugin-sql
+```
 
-# Using npm
+  </Tab>
+  <Tab value="npm">
+    
+```bash
 npm install @elizaos/plugin-sql
+```
 
-# Using pnpm
+  </Tab>
+  <Tab value="pnpm">
+    
+```bash
 pnpm add @elizaos/plugin-sql
 ```
+
+  </Tab>
+</Tabs>
 
 ## Configuration
 
