--- a/content/docs/advanced/deployment.mdx
+++ b/content/docs/advanced/deployment.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deployment
-description: Deploy Eliza agents using Docker, Docker Compose, and Fly.io
+description: This guide covers various deployment options for Eliza agents, from local Docker containers to cloud platforms. Each method is optimized for different use cases and scale requirements.
 ---
 
 # Deployment
