--- a/content/docs/learning-tracks/index.mdx
+++ b/content/docs/learning-tracks/index.mdx
@@ -17,15 +17,12 @@ Perfect for beginners who want to get started quickly with ElizaOS.
 - **Goal**: Create and deploy your first agent
 - **Focus**: Practical, hands-on learning
 
-<div className="border rounded-lg p-4 mb-4">
-  <h4 className="font-semibold mb-2">What You'll Learn:</h4>
-  <ul className="list-disc list-inside space-y-1">
-    <li>Setting up your development environment</li>
-    <li>Creating your first agent character</li>
-    <li>Understanding basic plugins</li>
-    <li>Deploying to Discord/Telegram</li>
-  </ul>
-</div>
+<Card title="What You'll Learn:">
+  - Setting up your development environment
+  - Creating your first agent character
+  - Understanding basic plugins
+  - Deploying to Discord/Telegram
+</Card>
 
 [Start Simple Track →](./simple/)
 
@@ -37,16 +34,13 @@ For developers who want to understand the architecture and build advanced agents
 - **Goal**: Build custom plugins and advanced agent systems
 - **Focus**: Deep technical understanding
 
-<div className="border rounded-lg p-4 mb-4">
-  <h4 className="font-semibold mb-2">What You'll Learn:</h4>
-  <ul className="list-disc list-inside space-y-1">
-    <li>ElizaOS architecture and runtime system</li>
-    <li>Building custom plugins and actions</li>
-    <li>Advanced state management and memory</li>
-    <li>Multi-agent systems and coordination</li>
-    <li>Custom model providers and integrations</li>
-  </ul>
-</div>
+<Card title="What You'll Learn:">
+  - ElizaOS architecture and runtime system
+  - Building custom plugins and actions
+  - Advanced state management and memory
+  - Multi-agent systems and coordination
+  - Custom model providers and integrations
+</Card>
 
 [Start Technical Track →](./technical/)
 
